# abishtutasks

./: CHANGELOG.md  README.md  meson.build
src/: meson.build
src/lib/util/: Date.py  Task.py  Time.py
src/widgets/: #TaskCardGlade.glade#  App.vala  HeadBar.vala  Main.vala  TaskCard.vala  TaskCardGlade.glade  Window.vala
src/widgets/NewTaskWindow/: Title.vala  Window.vala
src/widgets/TaskCard/: ColourBar.vala  TaskCard.vala  TaskCardButton.vala  TaskCardText.vala
